--- a/app/assets/stylesheets/application/activities/_overview.css.sass
+++ b/app/assets/stylesheets/application/activities/_overview.css.sass
@@ -24,7 +24,7 @@
       &:before
         background: url('/assets/difficulty-easy.png')
 
-  ul.equipment
+  ul.equipment, ul.used-in
     li
       padding: 5px 0
       list-style-type: disc
