add padding step

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -122,6 +122,7 @@ $dark-orange: #D25029
   .ordered-step-item
     width: 100%
     float: left
+    padding-bottom: 10px
     .step-element
       float: left
       @include boxsizing
