--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -12,7 +12,8 @@
       %i.icon-phone
     = link_to 'javascript:void(0);', class: 'btn-circle social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true} do
       %i.icon-facebook
-    = link_to 'javascript:void(0);', class: 'btn-circle' do
+    = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
+  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn-circle' do
       %i.icon-google-plus
     = link_to "https://twitter.com/intent/tweet?text=I love this #{@activity.title} recipe on ChefSteps!&hashtags=chefsteps&url=#{ url_encode(current_url(request))}", class: 'btn-circle' do
       %i.icon-twitter
