--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -17,7 +17,8 @@
       %i.icon-google-plus
     = link_to "https://twitter.com/intent/tweet?text=I love this #{@activity.title} recipe on ChefSteps!&hashtags=chefsteps&url=#{ url_encode(current_url(request))}", class: 'btn-circle' do
       %i.icon-twitter
-    = link_to 'javascript:void(0);', class: 'btn-circle' do
+    = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{s3_image_url(@activity.step_images.last)}", onclick: "javascript:window.open(this.href,
+  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn-circle' do
       %i.icon-pinterest
 
 %hr
