--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -157,6 +157,9 @@ $dark-orange: #D25029
 ////////////////////////////////////////
 
 /* Unique Styles */
+#logo-window
+  height: 20px
+
 #hero-container
   width: 100%
   margin: 0px
