--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,6 +2,7 @@
   .navbar-inner
     .container
       = link_to root_url, class: 'brand' do
+        = image_tag 'logo-window.png', id: 'logo-window'
         chefsteps
       %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
