css window logo yay

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -158,7 +158,15 @@ $dark-orange: #D25029
 
 /* Unique Styles */
 #logo-window
-  height: 20px
+  // height: 20px
+  box-shadow: 5px 0px 0px 0px white, 10px 0px 0px 0px white, 0px 6px 0px 0px white, 5px 6px 0px 0px white, 10px 6px 0px 0px white, 0px 12px 0px 0px white, 5px 12px 0px 0px white, 10px 12px 0px 0px white, 0px 18px 0px 0px white, 5px 18px 0px 0px white, 10px 18px 0px 0px white
+  background: white
+  width: 4px
+  height: 5px
+  overflow: hidden
+  float: left
+.logo-text
+  margin-left: 20px
 
 #hero-container
   width: 100%
