--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -2,8 +2,9 @@
   .navbar-inner
     .container
       = link_to root_url, class: 'brand' do
-        = image_tag 'logo-window.png', id: 'logo-window'
-        chefsteps
+        / = image_tag 'logo-window.png', id: 'logo-window'
+        #logo-window
+        .logo-text chefsteps
       %button.btn.btn-navbar{data: {toggle: 'collapse', target: '.nav-collapse'}}
         %span.icon-bar
         %span.icon-bar
