fix warning message

--- a/app/views/admin/activities/_step_form.html.haml
+++ b/app/views/admin/activities/_step_form.html.haml
@@ -31,4 +31,4 @@
 
 - if step && @recipe
   %li.two-button-row
-    = link_to 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe), class: 'admin-button update-warning'
+    = link_to 'Edit ingredients associated with steps', associated_ingredients_admin_recipe_path(@recipe), class: 'admin-button'
