--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -6,20 +6,7 @@
       :markdown
         #{@activity.description}
   .span6
-    = link_to 'javascript:void(0);', class: 'btn-circle' do
-      %i.icon-envelope-alt
-    = link_to 'javascript:void(0);', class: 'btn-circle' do
-      %i.icon-phone
-    = link_to 'javascript:void(0);', class: 'btn-circle social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true} do
-      %i.icon-facebook
-    = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
-  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;", class: 'btn-circle' do
-      %i.icon-google-plus
-    = link_to "https://twitter.com/intent/tweet?text=I love this #{@activity.title} recipe on ChefSteps!&hashtags=chefsteps&url=#{ url_encode(current_url(request))}", class: 'btn-circle' do
-      %i.icon-twitter
-    = link_to "http://pinterest.com/pin/create/button/?url=#{current_url(request)}&media=#{s3_image_url(@activity.step_images.last)}", onclick: "javascript:window.open(this.href,
-  '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=300,width=600');return false;", class: 'btn-circle' do
-      %i.icon-pinterest
+    = render 'layouts/social_buttons'
 
 %hr
 
