add section class

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -46,6 +46,9 @@ $dark-orange: #D25029
 ////////////////////////////////////////
 
 /* Media Objects */
+.section
+  margin-top: 20px
+  
 .two-columns
   column-count: 2
   column-gap: 30px
@@ -113,7 +116,7 @@ $dark-orange: #D25029
     border: none
 
 .ordered-steps
-  height: 360px
+  height: 320px
   overflow: auto
   //background: -webkit-linear-gradient(white 30%, hsla(0,0%,100%,0)), -webkit-linear-gradient(hsla(0,0%,100%,0), white 70%) bottom, -webkit-radial-gradient(50% 0, rgba(0,0,0,.2), transparent 70%), -webkit-radial-gradient(50% 100%, rgba(0,0,0,.2), transparent 70%) bottom
   //background-repeat: no-repeat
