--- a/app/views/layouts/_social_buttons.html.haml
+++ b/app/views/layouts/_social_buttons.html.haml
@@ -1,7 +1,7 @@
-= link_to 'javascript:void(0);', class: 'btn-circle' do
-  %i.icon-envelope-alt
-= link_to 'javascript:void(0);', class: 'btn-circle' do
-  %i.icon-phone
+/ = link_to 'javascript:void(0);', class: 'btn-circle' do
+/   %i.icon-envelope-alt
+/ = link_to 'javascript:void(0);', class: 'btn-circle' do
+/   %i.icon-phone
 = link_to 'javascript:void(0);', class: 'btn-circle social-action', data: {toggle: 'popover', placement: 'bottom', content: fb_like(current_url(request)), html: true} do
   %i.icon-facebook
 = link_to "https://plus.google.com/share?url=#{current_url(request)}", onclick: "javascript:window.open(this.href,
