update recipe show

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -116,7 +116,6 @@ $dark-orange: #D25029
     border: none
 
 .ordered-steps
-  height: 320px
   overflow: auto
   //background: -webkit-linear-gradient(white 30%, hsla(0,0%,100%,0)), -webkit-linear-gradient(hsla(0,0%,100%,0), white 70%) bottom, -webkit-radial-gradient(50% 0, rgba(0,0,0,.2), transparent 70%), -webkit-radial-gradient(50% 100%, rgba(0,0,0,.2), transparent 70%) bottom
   //background-repeat: no-repeat
@@ -131,21 +130,18 @@ $dark-orange: #D25029
       @include boxsizing
       padding: 10px
     .step-number
+      font-family: futura
+      letter-spacing: -3px
       width: 10%
       text-align: center
-      color: white
       font-size: 30px
       line-height: 40px
-      background-color: $orange
-    .step-image
-      width: 20%
-      padding-top: 0px
     .step-content
-      width: 70%
+      width: 90%
       padding-top: 0px
       ul, li
         list-style: none
-        padding: 0px
+        padding: 5px 0px
         margin: 0px
 
 .carousel-small
