--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -139,6 +139,8 @@ $dark-orange: #D25029
     .step-content
       width: 90%
       padding-top: 0px
+      h4
+        margin: 0px
       ul, li
         list-style: none
         padding: 5px 0px
