--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -13,6 +13,22 @@
           %i.icon-question-sign
 
   %tbody
+
     - activity.ingredients.each do |ingredient|
       = render 'ingredient_row', ingredient: ingredient
+
+    - # TODO Make sure the ingredient list works with scaling and activites as ingredients. Below is the redesign code
+    / - ingredients.each do |ingredient|
+    /   %tr
+    /     %td
+    /       - if ingredient.product_url?
+    /         = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
+    /       - else
+    /         = ingredient.title
+    /     %td.quantity-group.qtyfade
+    /       .lbs-qty
+    /       .lbs-label
+    /       .main-qty= ingredient.display_quantity
+    /     %td.unit.qtyfade= ingredient.unit
+
 
