highlight step ingredients

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -124,7 +124,7 @@ $dark-orange: #D25029
   .ordered-step-item
     width: 100%
     float: left
-    padding-bottom: 10px
+    padding: 10px 0px
     .step-element
       float: left
       @include boxsizing
@@ -145,6 +145,8 @@ $dark-orange: #D25029
         list-style: none
         padding: 5px 0px
         margin: 0px
+      .step-ingredients
+        display: none
 
 .carousel-small
   overflow: auto
