--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -19,16 +19,16 @@
 
     - # TODO Make sure the ingredient list works with scaling and activites as ingredients. Below is the redesign code
     / - ingredients.each do |ingredient|
-    /   %tr
+    /   %tr.ingredient-item{data: {:'ingredient-id' => ingredient.ingredient.id}}
     /     %td
     /       - if ingredient.product_url?
     /         = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
     /       - else
     /         = ingredient.title
+    /     %td
+    /       .prependable
     /     %td.quantity-group.qtyfade
     /       .lbs-qty
     /       .lbs-label
     /       .main-qty= ingredient.display_quantity
     /     %td.unit.qtyfade= ingredient.unit
-
-
