--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -148,6 +148,11 @@ $dark-orange: #D25029
       .step-ingredients
         display: none
 
+.prependable
+  text-align: right
+  width: 100%
+  padding-right: 2px
+
 .carousel-small
   overflow: auto
   .carousel-small-inner
