--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -1,8 +1,8 @@
 %table.ingredients{:itemprop => "ingredients"}
-  %colgroup
-    %col{width: "68%"}
-    %col{width: "120px"}
-    %col{width: "8%"}
+  / %colgroup
+  /   %col{width: "68%"}
+  /   %col{width: "120px"}
+  /   %col{width: "8%"}
 
   %thead
     %tr
@@ -20,7 +20,7 @@
     - # TODO Make sure the ingredient list works with scaling and activites as ingredients. Below is the redesign code
     / - ingredients.each do |ingredient|
     /   %tr.ingredient-item{data: {:'ingredient-id' => ingredient.ingredient.id}}
-    /     %td
+    /     %td.ingredient-title
     /       - if ingredient.product_url?
     /         = link_to ingredient.title, ingredient.product_url, { class: ('bullet-for-sale' if ingredient.for_sale) }
     /       - else
