slick step ingredients

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -242,6 +242,10 @@ $dark-orange: #D25029
     .ingredient-title, .prependable
       font-weight: bold
       opacity: 1
+    .quantity-group, .unit
+      opacity: .3
+  .ingredient-unhighlighted
+    opacity: .3
 
 #footer
   margin-top: 50px
