--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -16,11 +16,12 @@
           .video-container
             %iframe{src: youtube_url(@activity.youtube_id)}
           - if @activity.ingredients.any?
-            .activity-ingredients-list#full-ingredients-list
+            .activity-ingredients-list#full-ingredients-list.section
               = render 'ingredients_list', ingredients: @activity.ingredients
         - if @activity.required_equipment.any?
-          %h4 Equipment and Materials
-          = render 'equipment_list', equipment: @activity.required_equipment
+          .section
+            %h4 Equipment and Materials
+            = render 'equipment_list', equipment: @activity.required_equipment
       .span6.section
         .ordered-steps
           - @activity.steps.each_with_index do |step, index|
