--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,5 +30,5 @@
 
     = render 'layouts/footer'
     = render 'layouts/youtube'
+    = render 'layouts/twitter'
     = javascript_include_tag 'application'
-    = javascript_include_tag '//platform.twitter.com/widgets.js'
