hideable image viewer

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -122,6 +122,12 @@ $dark-orange: #D25029
     border: none
   #image-viewer
     position: absolute
+    display: none
+    #image-viewer-close
+      position: absolute
+      top: -20px
+      right: -20px
+      color: $orange
 
 .ordered-steps
   overflow: auto
