--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -18,7 +18,7 @@
             #image-viewer
               #image-viewer-container
               #image-viewer-close
-                %i.icon-remove-circle.icon-large
+                %i.icon-remove.icon-large
           - if @activity.ingredients.any?
             .activity-ingredients-list#full-ingredients-list.section
               = render 'ingredients_list', ingredients: @activity.ingredients
