--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -128,6 +128,8 @@ $dark-orange: #D25029
       top: -20px
       right: -20px
       color: $orange
+      &:hover
+        cursor: pointer
 
 .ordered-steps
   overflow: auto
