add featured image id

--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -15,6 +15,7 @@
     = f.input :tag_list
     = f.input :description, label: "Description (Markdown or HTML)"
     = f.input :youtube_id
+    = f.input :featured_image_id
     = f.input :image_id
     = f.input :transcript
     = f.input :timing
