update image sizes for media centered

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -88,6 +88,7 @@ $dark-orange: #D25029
 .media-centered-medium
   width: 100%
   margin-bottom: 20px
+  height: 228px
 
 .media-hero
   position: relative
@@ -271,10 +272,10 @@ $dark-orange: #D25029
     border-width: 0px !important
     box-shadow: none !important
 
-#recipe-gallery
-  .media-centered
-    img
-      height: 210px
+// #recipe-gallery
+//   .media-centered
+//     img
+//       height: 210px
 
 #footer
   margin-top: 50px
