--- a/app/views/recipe_gallery/index.html.haml
+++ b/app/views/recipe_gallery/index.html.haml
@@ -5,5 +5,5 @@
     .row
       - @recipes.each do |recipe|
         .span4
-          = render 'shared/media_centered', media: recipe, media_image: recipe.featured_image, main: 'Recipe', size: 'medium'
+          = render 'shared/media_centered', media: recipe, main: 'Recipe', size: 'medium'
     = paginate @recipes
