--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -1,7 +1,7 @@
 / Defaults to size medium
 %div{class: "media-centered media-centered-#{ size ||= 'medium' }"}
   = link_to media do
-    = image_tag s3_image_url(media_image)
+    = image_tag s3_image_url(media.featured_image)
     .title-block
       .title-main
         = main
