--- a/app/views/search/index.html.haml
+++ b/app/views/search/index.html.haml
@@ -1,24 +1,38 @@
 .container.search-container{:class => params[:q].blank? ? 'no-results' : nil}
 
-  %h2 Search Chefsteps
-  = form_tag '/search', :method => :get, class: 'form-inline' do
-    = text_field_tag :q, nil, :placeholder => 'Example: sous vide'
-    = submit_tag 'Search', class: 'btn btn-primary'
+  .row
+    .span6.offset3.text-center
+      %h2 Search Chefsteps
+      = form_tag '/search', :method => :get do
+        = text_field_tag :q, nil, :placeholder => 'Example: sous vide'
+        = submit_tag 'Search', class: 'btn btn-primary'
   - if params[:q]
-
     - if @results.blank?
       %h4= "There were no results for '#{params[:q]}' but maybe you'll like these recipes:"
-      .search-results
-        = render partial: 'result_item', collection: @noresults, :as => :item
+      .row.search-results
+        = # TODO Remove unused partial
+        / = render partial: 'result_item', collection: @noresults, :as => :item
+        - @noresults.each do |result_item|
+          .span4
+            = render 'shared/media_centered', media: result_item.searchable, main: 'Recipe', size: 'medium'
 
     - else
       %h4= "Results for '#{params[:q]}':"
       = paginate @results
-      .search-results
-        = render partial: 'result_item', collection: @results, :as => :item
+      .row.search-results
+        = # TODO Remove unused partial
+        / = render partial: 'result_item', collection: @results, :as => :item
+        - @results.each do |result_item|
+          .span4
+            = render 'shared/media_centered', media: result_item.searchable, main: 'Recipe', size: 'medium'
+
       = paginate @results
 
-    - if @related_results
+    - if @related_results && @related_results.any?
       %h4 Related Results:
-      .search-results
-        = render partial: 'result_item', collection: @related_results, :as => :item
+      .row.search-results
+        = # TODO Remove unused partial
+        / = render partial: 'result_item', collection: @related_results, :as => :item
+        - @related_results.each do |result_item|
+          .span4
+            = render 'shared/media_centered', media: result_item.searchable, main: 'Recipe', size: 'medium'
