fix question margin

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -189,6 +189,11 @@ $dark-orange: #D25029
     text-align: left
   th#quantity
     text-align: right
+    .recipetip
+      margin-left: -11px
+    .icon-question-sign
+      position: absolute
+      margin-left: 18px
   td
     font-size: 14px
     div
