update image viewer code

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -164,6 +164,8 @@ $dark-orange: #D25029
         margin: 0px
       .step-ingredients
         display: none
+    .step-image
+      display: none
 
 /* Emphasizes the content being hovered */
 .ordered-steps:hover > .ordered-step-item
