--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,5 +1,5 @@
 .container
-  .box.box-full
+  .hero-unit
     - if params[:email]
       %h2 Thanks for signing up for our Newsletter!
       %h5 If you would like to create an account, please complete following:
@@ -36,6 +36,7 @@
               =label_tag :okay_to_email do
                 = check_box_tag :okay_to_email, true, true
                 = "Please email me the latest updates from ChefSteps".html_safe
-            =f.submit 'Sign up', class: 'btn btn-primary'
+            =f.submit 'Sign up', class: 'btn btn-primary btn-large'
+    %hr
     .registration.facebook
       = render 'devise/shared/facebook_login', text: 'Sign up with <b>Facebook</b>'
