--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -295,7 +295,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
 
 #footer
   margin-top: 50px
-  background-image: url('/assets/footer.jpg')
+  background-image: url('http://d2eud0b65jr0pw.cloudfront.net/final_dish_IMG_5402.jpg')
   background-position: left center
   background-repeat: no-repeat
   background-size: 100%
