add technique to navigation

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -33,7 +33,7 @@
                       %h5.media-heading Ingredient Title
                       %p Ingredient Description
               %li
-                = link_to '#' do
+                = link_to techniques_path do
                   .media
                     %h4
                       .pull-left
