--- a/app/views/admin/activities/_form.html.haml
+++ b/app/views/admin/activities/_form.html.haml
@@ -9,6 +9,7 @@
 
 = semantic_form_for [:admin, @activity] do |f|
   = f.inputs name: "Activity Details" do
+    = f.input :activity_type, as: :select, collection: Activity::TYPES
     = f.input :published
     = f.input :title
     %div#alltags{data: {alltags: ActsAsTaggableOn::Tag.all.map(&:name) }}
