--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -49,7 +49,7 @@
                       %h5.media-heading Technique Title
                       %p Technique Description
               %li
-                = link_to '#' do
+                = link_to sciences_path do
                   .media
                     %h4
                       .pull-left
