--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -1,11 +1,11 @@
 / Defaults to size medium
 %div{class: "media-centered media-centered-#{ size ||= 'medium' }"}
-  = link_to media do
-    - if media.featured_image
-      = image_tag s3_image_url(media.featured_image)
-    - else
-      = image_tag '/assets/missing.png'
-    .title-block
-      .title-main
-        = main
-      = media.title.html_safe
+  / = link_to media do
+  - if media.featured_image
+    = image_tag s3_image_url(media.featured_image)
+  - else
+    = image_tag '/assets/missing.png'
+  .title-block
+    .title-main
+      = main
+    = media.title.html_safe
