labels for activities

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -313,6 +313,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     &:hover
       text-decoration: none
 
+/* Labels */
+
+.label-large
+  font-size: 20px
+  line-height: 20px
+  padding: 5px 10px
+
 /* Buttons */
 
 .btn-primary
