--- a/app/views/shared/_media_hero.html.haml
+++ b/app/views/shared/_media_hero.html.haml
@@ -10,5 +10,7 @@
             .btn-play
               .btn-play-trangle
         .media-heading.pull-left
-          %h2= main_title
-          %h3= media_object.title.html_safe
+          %h2= media_object.title.html_safe
+          - media_object.activity_type.each do |type|
+            .label.label-large.label-important
+              = type
