--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -68,6 +68,8 @@ body.admin_namespace
       padding: 1px 2px 0 2px
 
     i.icon-remove
+      margin-top: 5px
+      margin-left: 5px
       float: right
       font-size: 16px
 
