--- a/app/views/admin/activities/_ingredient_form.html.haml
+++ b/app/views/admin/activities/_ingredient_form.html.haml
@@ -12,7 +12,7 @@
   end
 
 %tr{id: row_id, class: ('template-row' if is_template )}
-  %td= hidden_field_tag "#{field_name_prefix}[title]", title, {:'data-ingredient-id' => is_recipe ? -ingredient_id : ingredient_id, :class => "ingredient"}
+  %td= text_field_tag "#{field_name_prefix}[title]", title, {:'data-provide' => "typeahead",  :'autocomplete' => 'off', :"class" => "ingredient"}
   %td= text_field_tag "#{field_name_prefix}[display_quantity]", display_quantity, class: "quantity"
   %td= select_tag "#{field_name_prefix}[unit]", options_for_select(%w[g kg ea a/n recipe], unit), class: "unit"
   %td
