update activity title to html safe

--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -1,7 +1,7 @@
 .row
   .span6
     %h1
-      = @activity.title
+      = @activity.title.html_safe
     - if @activity.description?
       :markdown
         #{@activity.description}
