update media centered

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -65,6 +65,10 @@
                       %h5.media-heading Science Title
                       %p Science Description
           %li
+            = link_to 'Forum', 'http://forum.chefsteps.com'
+          %li
+            = link_to 'Shop', 'http://store.chefsteps.com'
+          %li
             = link_to 'Search', search_index_path
 
 
