--- a/app/views/shared/_media_centered.html.haml
+++ b/app/views/shared/_media_centered.html.haml
@@ -6,6 +6,6 @@
   - else
     = image_tag '/assets/missing.png'
   .title-block
-    .title-main
-      = main
     = media.title.html_safe
+    .title-type
+      = main
