--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -84,13 +84,13 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
     text-transform: uppercase
     position: absolute
     text-align: center
-    top: 20%
+    top: 40%
     width: 100%
     color: white
     text-shadow: 0px 1px rgba(0,0,0,.6)
-    .title-main
+    .title-type
       background-color: rgba(255,255,255,.8)
-      margin: 0px 10% 3%
+      margin: 0px 35% 3%
       padding: 5px 0px
       color: black
       text-shadow: none
